fixed w/ overflow

--- a/static/styles/global.css
+++ b/static/styles/global.css
@@ -1,7 +1,7 @@
 /* page */
 
 html {
-    overflow: hidden;
+    overflow: auto !important;
 }
 
 body > div.container > div.content {
